--- a/src/app/shared/components/month-picker/month-picker.component.html
+++ b/src/app/shared/components/month-picker/month-picker.component.html
@@ -11,9 +11,9 @@
 </button>
 &nbsp;
 
-<label class="col-md-11 " >
+<label class="col-xs-11 " >
   <span class=" d-none ">{{ 'month' | translate | titlecase }}</span>
-  <mat-form-field>
+  <mat-form-field style="width: 100px;" >
     <input
       matInput
       (click)="monthPicker.open()"
