--- a/src/app/shared/components/options-dialog/options-dialog.component.html
+++ b/src/app/shared/components/options-dialog/options-dialog.component.html
@@ -1,8 +1,8 @@
-<div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between center">
-  <div fxFlex="90">
+<div mat-dialog-title class="d-flex flex-row justify-content-between align-items-center ">
+  <div class="d-flex col-11 ">
     {{ data.title | translate }}
   </div>
-  <div fxFlex="10">
+  <div class="d-flex col-1 ">
     <button
       type="button"
       mat-icon-button
