--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,11 +1,13 @@
-<div fxLayout="column" fxFlexFill fxLayoutAlign="center center" style="
+<div class="d-flex flex-fill flex-column justify-content-center align-items-center " style="
     background-image: url('../../../assets/login11.jpg');
     height: 100%;
+    position: fixed;
+    overflow:hidden;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   ">
-  <div fxLayout="column">
+  <div class="d-flex flex-column flex-grow-1">
     <div class="mat-elevation-z4">
       <mat-card>
         <mat-card-title>User login
@@ -14,7 +16,7 @@
           </a>
         </mat-card-title>
         <mat-card-content>
-          <form fxLayout="column" fxLayoutAlign="start stretch"
+          <form class="d-flex flex-column justify-content-start align-items-stretch"
                 [formGroup]="userForm" (ngSubmit)="login()">
             <div *ngIf="formMessages.all" class="help is-danger">
               <mat-form-field class="full-width">
